# leetcode-compare

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
docs/: findings.md  print-in-order-deep-dive.md
engine/: Engine.hpp  Work.hpp
include/shootout/: Gates.hpp  Metrics.hpp  Mutexes.hpp  Primitives.hpp  RWLocks.hpp  Scenarios.hpp
problems/print-in-order/: CMakeLists.txt  README.md
problems/print-in-order/bench/: benchmark.cpp
problems/print-in-order/relay/: Gates.hpp
problems/print-in-order/runner/: runner.cpp
problems/print-in-order/solutions/: AtomicWait.hpp  ConditionVariable.hpp  Spinlock.hpp  SpinlockPause.hpp  SpinlockYield.hpp
problems/print-in-order/test/: correctness.cpp
problems/print-in-order/testcases/: TestCases.hpp
results/: sweep.csv
scripts/: compare.sh  plot.py  sweep.sh
src/: shootout.cpp  tests.cpp
